--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,14 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.google.firebase:firebase-database:17.0.0'
+    implementation 'com.android.support:design:28.+'
     implementation 'com.android.support:cardview-v7:28.+'
     implementation 'com.android.support:recyclerview-v7:28.+'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.firebaseui:firebase-ui-database:1.2.0'
+    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
+
+
 
 
 }
