--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ProductList"></activity>
+        <activity android:name=".ProductDetail"></activity>
+        <activity android:name=".ProductList" />
         <activity
             android:name=".Home"
             android:label="@string/title_activity_home"
