--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.google.firebase:firebase-database:17.0.0'
+    implementation 'com.github.mancj:MaterialSearchBar:0.7.1'
     implementation 'com.android.support:design:28.+'
     implementation 'com.android.support:cardview-v7:28.+'
     implementation 'com.android.support:recyclerview-v7:28.+'
