--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-database:17.0.0'
     implementation 'com.github.mancj:MaterialSearchBar:0.7.1'
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:design:28.+'
     implementation 'com.android.support:cardview-v7:28.+'
     implementation 'com.android.support:recyclerview-v7:28.+'
