--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".OrderStatus"></activity>
-        <activity android:name=".Cart" />
+        <activity android:name=".OrderStatus"
+            android:parentActivityName=".Home"
+            ></activity>
+        <activity android:name=".Cart"
+            android:parentActivityName=".Home"
+            />
         <activity android:name=".ProductDetail"
             android:parentActivityName=".ProductList"
             />
